# agent-runner-opencode

./: .gitignore  .s9b-step6a-contract.md  Cargo.toml  README.md
contract/v1/: common.schema.json  describe.schema.json  discovery.schema.json  launch.schema.json  migration.schema.json  policy.schema.json  quota.schema.json  rotation.schema.json  schema.schema.json  session.schema.json  settings.schema.json  setup.schema.json  terminal.schema.json
src/: account.rs  codex.rs  discovery.rs  dispatch.rs  encoding.rs  envelope.rs  launch.rs  lib.rs  main.rs  migration.rs  models.rs  opencode.rs  policy.rs  quota.rs  rotation.rs  schema.rs  session.rs  settings.rs  setup.rs  shell.rs  terminal.rs
tests/: contract_cluster_a.rs  contract_cluster_b.rs  contract_cluster_c.rs  contract_cluster_d.rs  contract_foundation.rs  f8_declarations.rs
tests/cluster_a/: assertions.rs  fixtures.rs  mod.rs  requests.rs  stream.rs
tests/cluster_b/: assertions.rs  fixtures.rs  mod.rs  requests.rs  stream.rs
tests/cluster_c/: assertions.rs  fixtures.rs  mod.rs  requests.rs  stream.rs
tests/cluster_d/: assertions.rs  fixtures.rs  mod.rs  requests.rs  stream.rs
tests/fixtures/: README.md  chatgpt_usage_windows.json  opencode_export.json  opencode_launch_events.jsonl
tests/support/: mod.rs
