[package]
name = "agent-runner-opencode"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "agent-runner-opencode"
path = "src/main.rs"

[lib]
name = "agent_runner_opencode"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
jsonschema = { version = "0.18", features = ["draft202012"] }
